# icon-previewer

./: README.md  com.github.lainsce.icon-previewer.doap  meson.build
data/: app.css  app.gresource.xml  com.github.lainsce.icon-previewer.appdata.xml.in  com.github.lainsce.icon-previewer.desktop.in  com.github.lainsce.icon-previewer.gresource.xml  com.github.lainsce.icon-previewer.gschema.xml  meson.build  style.css
data/appicons/: icons.gresource.xml
data/ui/: app.gresource.xml  colourpane.ui  iconexporter.ui  iconsaver.ui  mainwindow.ui  menus.ui  newiconwizard.ui  style.css
po/: README.md  com.github.lainsce.icon-previewer.pot  nl.po  pt-br.po
po/extra/: LINGUAS  extra.pot  nl.po  pt-br.po
src/: Application.vala  Colour.vala  ColourPane.vala  Common.vala  IconExporter.vala  IconSaver.vala  MainWindow.vala  NewIconWizard.vala  Utils.vala  app.gresource.xml  common.vala  config.vala.in  iconsaver.ui  main.vala  meson.build  newiconwizard.ui  resource.gresource.xml  saver.vala  window.ui  window.vala  wizard.ui  wizard.vala
src/Services/: DialogUtils.vala  Utils.vala
src/Widgets/: HeaderBar.vala  WelcomeView.vala
src/exporter/: exporter.vala
src/icons/: icons.gresource.xml
src/views/: colour.vala  colourpane.ui  colourpane.vala
src/wallpapers/: wallpapers.gresource.xml
